<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<parent>
		<groupId>de.intranda.goobi.workflow</groupId>
		<artifactId>goobi-core</artifactId>
		<version>22.04.6-SNAPSHOT</version>
	</parent>
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.intranda.goobi.workflow</groupId>
	<artifactId>goobi-core-jar</artifactId>
	<version>22.04.6-SNAPSHOT</version>
	<packaging>jar</packaging>

    <properties>
        <sonar.projectBaseDir>..</sonar.projectBaseDir>
        <sonar.sources>../src/main/java,pom.xml</sonar.sources>
        <sonar.skip>true</sonar.skip>
    </properties>

	<build>
		<sourceDirectory>${project.basedir}/../src/main/java</sourceDirectory>
		<testSourceDirectory>${project.basedir}/../src/test/java</testSourceDirectory>
		<resources>
			<resource>
				<directory>${project.basedir}/../src/main/resources</directory>
			</resource>
		</resources>
		<testResources>
			<testResource>
				<directory>${project.basedir}/../src/test/resources</directory>
				
			</testResource>
			
            <testResource>
                <directory>${project.basedir}/../src/main/java</directory>
                <excludes>
                    <exclude>**/*.java</exclude>
                </excludes>
            </testResource>
		</testResources> 
		<plugins>

			<!-- make test script executable  -->
			<plugin>
			    <groupId>org.apache.maven.plugins</groupId>
			    <artifactId>maven-antrun-plugin</artifactId>
			    <version>1.6</version>
			    <executions>
			        <execution>
			            <id>process-test-classes</id>
			            <phase>process-test-classes</phase>
			            <configuration>
			                <target>
			                    <chmod file="target/test-classes/scripts/script_createDirMeta.sh" perm="755"/>
			                </target>
			            </configuration>
			            <goals>
			                <goal>run</goal>
			            </goals>
			        </execution>
			    </executions>
			</plugin>

            <plugin>
              <groupId>org.owasp</groupId>
              <artifactId>dependency-check-maven</artifactId>
              <version>7.0.4</version>
              <configuration>
              <!--
                  <failBuildOnCVSS>8.0</failBuildOnCVSS>
              -->
              <skipProvidedScope>true</skipProvidedScope>
              <skipTestScope>true</skipTestScope>
              <suppressionFiles>
                  <suppressionFile>${project.basedir}/goobi-suppression.xml</suppressionFile>
                    </suppressionFiles>
                    <format>ALL</format>
                    <ossIndexWarnOnlyOnRemoteErrors>true</ossIndexWarnOnlyOnRemoteErrors>
                    <failOnError>false</failOnError>
                    <ossindexAnalyzerEnabled>false</ossindexAnalyzerEnabled>
                    
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
              
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>

				</configuration>
                
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.12.4</version>
                <configuration>
<!--                           <skipTests>true</skipTests> -->
                    <excludes>
                        <exclude>**/de/sub/goobi/TestAll.java</exclude>
                    </excludes>
                    <systemProperties>
                        <property>
                            <name>java.util.logging.config.file</name>
                            <value>src/test/resources/log4j2.test.xml</value>
                        </property>
                    </systemProperties>                    
                    <argLine>--add-exports java.base/jdk.internal.loader=ALL-UNNAMED</argLine>
                </configuration>

            </plugin>
		</plugins>
	</build>

</project>
